// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/page/Nav/SideMenu/MockSelectItemOptions should render snap when has list data 1`] = `
<body>
  <div>
    <div
      class="css-11lv9el"
    >
      <div
        class="ant-select-item ant-select-item-option"
      >
        <div
          class="ant-select-item-option-content"
        >
          <div
            class="css-gmbytu"
          >
            <svg
              height="18"
              viewBox="64 64 896 896"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32M332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332zm460 600H232V536h560zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 1 0-56 0"
              />
            </svg>
            <span
              class="project-selector-label-text"
            >
              test1
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-select-item ant-select-item-option"
      >
        <div
          class="ant-select-item-option-content"
        >
          <div
            class="css-gmbytu"
          >
            <svg
              class="project-flag-icon"
              color="currentColor"
              height="18"
              viewBox="0 0 18 18"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
                fill="currentColor"
              />
            </svg>
            <span
              class="project-selector-label-text"
            >
              test2
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/MockSelectItemOptions should render snap when has list data 2`] = `
<body>
  <div>
    <div
      class="css-11lv9el"
    >
      <div
        class="ant-select-item ant-select-item-option"
      >
        <div
          class="ant-select-item-option-content"
        >
          <div
            class="css-gmbytu"
          >
            <svg
              height="18"
              viewBox="64 64 896 896"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32M332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332zm460 600H232V536h560zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 1 0-56 0"
              />
            </svg>
            <span
              class="project-selector-label-text"
            >
              test1
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-select-item ant-select-item-option ant-select-item-option-active"
      >
        <div
          class="ant-select-item-option-content"
        >
          <div
            class="css-gmbytu"
          >
            <svg
              class="project-flag-icon"
              color="currentColor"
              height="18"
              viewBox="0 0 18 18"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
                fill="currentColor"
              />
            </svg>
            <span
              class="project-selector-label-text"
            >
              test2
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/MockSelectItemOptions should render snap when has list data 3`] = `
<body>
  <div>
    <div
      class="css-11lv9el"
    >
      <div
        class="ant-select-item ant-select-item-option"
      >
        <div
          class="ant-select-item-option-content"
        >
          <div
            class="css-gmbytu"
          >
            <svg
              height="18"
              viewBox="64 64 896 896"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32M332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332zm460 600H232V536h560zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 1 0-56 0"
              />
            </svg>
            <span
              class="project-selector-label-text"
            >
              test1
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-select-item ant-select-item-option"
      >
        <div
          class="ant-select-item-option-content"
        >
          <div
            class="css-gmbytu"
          >
            <svg
              class="project-flag-icon"
              color="currentColor"
              height="18"
              viewBox="0 0 18 18"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
                fill="currentColor"
              />
            </svg>
            <span
              class="project-selector-label-text"
            >
              test2
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/MockSelectItemOptions should render snap when list is empty 1`] = `
<body>
  <div>
    <div
      class="css-11lv9el"
    />
  </div>
</body>
`;
